# mdx

./: .gitignore  Justfile  Makefile  README.md  ledger.md  main.py  pyproject.toml  report_2025-01-01_2025-02-01.md  requirements.txt
resources/: ledger.j  ledger.md
src/md_report/: command.py  document.py  expression.py  frontmatter.py  main.py  param.py  parser.py  variable.py
src/mdsh/: __init__.py  command.py  document.py  expression.py  frontmatter.py  main.py  param.py  parser.py  variable.py
src/mdx/: __init__.py  document.py  main.py  parser.py  variable.py
